components/policies/kyverno/disallow-latest-tag/test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: require-image-tag
    resources: [good-pinned-tag, good-digest]
    kind: Pod
    result: pass
  - policy: disallow-latest-tag
    rule: require-image-tag
    resources: [bad-latest, bad-untagged]
    kind: Pod
    result: fail
